# mimir_regex_benchmark

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe.md  annotate_matched.py  benchmark.sh  benchmark_mail.cpp  ctre_match_mail.cpp  eval.cpp  manual_match_mail.cpp  match_mail.mim  match_mail.thorin  match_mail_nondet.mim  match_mail_nondet.thorin  pcre2_match_mail.cpp  std_match_mail.cpp
